@@ -1,17 +1,28 @@
 USB communication
 =================
 
-  * No command chaining, but extended APDU and extended Lc and Le
+  * No command chaining, but extended APDU and extended Lc and Le.
+    I think that this keep the code simple.
 
-  * dwMaxCCIDMessageLength: 64
+  * Once, the value of dwMaxCCIDMessageLength was 64 and we supported
+    ICC block chaining, so that we could not handle multple Bulk
+    transactions.
+
+  * Now, the value of dwMaxCCIDMessageLength is 320, that's the size
+    of header of ICC block plus size of maximum APDU (by 64
+    granularity).  Still, some ccid implementation sends ICC block
+    using chaining (unfortunately), so we keep the code of ICC block
+    chaining.
 
 
 OpenPGP card protocol implementation
 ====================================
 
-I try to follow "no clear password(s)" policy.
-After key import, keystrings are also removed.
-But because of this, it is not that easy to overwrite key(s).
+I try to follow "no clear password(s)" policy, even if it is on
+protected flash memory.  Futher, keystrings for user and reset code
+are removed after key imports.  Because of this, replacing keys
+are not possible without password information.  Thus, replacing
+existing keys are not supported.
 
 
 How a private key is stored
